--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,16 @@
 {
+	"name": "Lightning Reopen",
+	"version": "1.0.2",
+	"description": "Keep your browser open in the background for faster re-opening",
 	"permissions": [
-	"background"
-]
+		"background"
+	],
+	"icons": {
+		"16": "logo.png",
+		"32": "logo32.png",
+		"64": "logo64.png",
+		"128": "logo128.png",
+		"256": "logo256.png"
+	},
+	"manifest_version": 2
 }
